	S. (See also PR#7084.)

    o	TukeyHSD() now labels comparisons when applied to an
	interaction in an aov() fit.  It detects non-factor terms in
	'which' and drops them if sensible to do so.

    o	There is now a replacement method for window(), to allow a
	range of values of time series to be replaced by specifying the
	start and end times (and optionally a frequency).

    o	The screen devices x11(), windows() and quartz() have a new
	argument 'bg' to set the default background colour.


    o	Subassignments involving NAs and with a replacement value of
	length > 0 are now disallowed.	(They were handled
	inconsistently in R < 2.0.0, see PR#7210.)  For data frames
	they are disallowed altogether, even for logical matrix indices
	(the only case which used to work).

    o	The way the comparison operators handle a list argument has
	been rationalized so a few more cases will now work -- see
	?Comparison.

    o	Indexing a vector by a character vector was slow if both the
	vector and index were long (say 10,000).  Now hashing is used
	and the time should be linear in the longer of the lengths
	(but more memory is used).

    o	Printing a character string with embedded nuls now prints the
	whole string, and non-printable characters are represented by
	octal escape sequences.

    o	Objects created from a formally defined class now include the
	name of the corresponding package as an attribute in the
	object's class.	 This allows packages with namespaces to have
	private (non-exported) classes.

    o	Changes to package 'grid':

	- Calculation of number of circles to draw in circleGrob now
	  looks at length of y and r as well as length of x.

	- Calculation of number of rectangles to draw in rectGrob now
	  looks at length of y, w, and h as well as length of x.

	- All primitives (rectangles, lines, text, ...) now handle
	  non-finite values (NA, Inf, -Inf, NaN) for locations and
	  sizes.

	  Non-finite values for locations, sizes, and scales of